# rnd-onboarding

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  schemas.py
docs/: DECISION.md  PLAN.md
docs/ref/: instruction.md
notebooks/: 01_openai_version.ipynb  01_openai_version.py  02_langchain_version.ipynb  02_langchain_version.py  03_boxoffice.ipynb  03_boxoffice.py
prompts/: __init__.py
scripts/: build_notebooks.py
src/rnd_onboarding/: __init__.py  schemas.py
src/rnd_onboarding/prompts/: __init__.py
