[project]
name = "rnd-onboarding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=1.3.9",
    "langchain-openai>=1.3.2",
    "openai>=2.41.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
]
