[project]
name = "rnd-onboarding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=1.3.9",
    "langchain-openai>=1.3.2",
    "openai>=2.41.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "jupytext>=1.19.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rnd_onboarding"]

[tool.jupytext]
# 노트북(.ipynb)을 .py(percent 포맷)와 페어링한다.
# .py 가 "코드 source"(깔끔한 diff·편집), .ipynb 는 실행 결과(출력) 보관.
# 편집 후 동기화: uv run jupytext --sync notebooks/*.ipynb
formats = "ipynb,py:percent"
