[project]
name = "rnd-onboarding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=1.3.9",
    "langchain-openai>=1.3.2",
    "openai>=2.41.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "jupytext>=1.19.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rnd_onboarding"]

# NOTE: keep this file ASCII-only. jupytext reads it with the platform default
# encoding (cp949 on Korean Windows), so non-ASCII here breaks `jupytext --sync`.
[tool.jupytext]
# Pair notebooks (.ipynb) with .py percent files: .py is the code source
# (clean diffs / editor editing), .ipynb keeps execution outputs.
# Sync after editing: uv run jupytext --sync notebooks/*.ipynb
formats = "ipynb,py:percent"
